--- a/core/components/formdatamanager/docs/changelog.txt
+++ b/core/components/formdatamanager/docs/changelog.txt
@@ -1,5 +1,9 @@
-FormDataManager-1.0.2-beta
-==========================
+FormDataManager-1.1.0.pl
+========================
+
+1.0.3
+-----
+Added functionality to define layout and view/export data saved for FormIt forms using FormItFormSave hook.
 
 1.0.2
 -----
@@ -19,5 +23,5 @@ Update last exported date
 
 Todo / Wish List
 ----------------
-Add support to export data from other forms e.g. Formit
+Add support to export data from other forms or data saved to custom forms.
 Create a class for use by a scheduled process (e.g. scheduler or CRON job) to export all forms since last export.
