--- a/core/components/formdatamanager/docs/changelog.txt
+++ b/core/components/formdatamanager/docs/changelog.txt
@@ -1,6 +1,16 @@
-FormDataManager-1.3.9.pl
+FormDataManager-1.3.11.pl
 ========================
 
+Added optional output functions to standard layouts.
+View/Export processors changed to use output functions on tables.
+
+1.3.10.pl
+--------
+New feature for layouts mapped to a template to add optional output functions (see snippet fdmViewExportFunctions) to set values using function.
+Changed formit/formz data list processors to get excluded 'inactive' records even if set as NULL (following upgrade 1.3+).
+
+1.3.9.pl
+--------
 Able to set formz/formit forms as inactive.
 Add filters to formit & formz grids for active/inactive forms.
 Improved grid processors to correctly count active/inactive when multiple pages.
