--- a/core/components/formdatamanager/docs/changelog.txt
+++ b/core/components/formdatamanager/docs/changelog.txt
@@ -1,7 +1,14 @@
-FormDataManager-1.3.11.pl
+FormDataManager-1.3.13.pl
 ========================
 
+Added system settings to enable more control over functionality of this extra.
+
+1.3.12.pl
+---------
 Added optional output functions to standard layouts.
+
+1.2.11.pl
+---------
 View/Export processors changed to use output functions on tables.
 
 1.3.10.pl
