--- a/core/components/formdatamanager/docs/changelog.txt
+++ b/core/components/formdatamanager/docs/changelog.txt
@@ -1,6 +1,10 @@
-FormDataManager-1.3.13.pl
-========================
+FormDataManager-1.3.14.pl
+=========================
+Fixed bugs in proocessor create / update classes checking on wrong id's.
 
+
+1.3.13.pl
+---------
 Added system settings to enable more control over functionality of this extra.
 
 1.3.12.pl
