--- a/core/components/formdatamanager/docs/changelog.txt
+++ b/core/components/formdatamanager/docs/changelog.txt
@@ -1,7 +1,13 @@
-FormDataManager-1.3.14.pl
+FormDataManager-1.3.15.pl
 =========================
-Fixed bugs in proocessor create / update classes checking on wrong id's.
 
+Added bulk export option for formit & formz.
+New system setting for export folder path.
+
+
+1.3.14.pl
+---------
+Fixed bugs in proocessor create / update classes checking on wrong id's.
 
 1.3.13.pl
 ---------
