--- a/core/components/formdatamanager/docs/changelog.txt
+++ b/core/components/formdatamanager/docs/changelog.txt
@@ -1,9 +1,7 @@
 FormDataManager-1.3.15.pl
 =========================
-
-Added bulk export option for formit & formz.
-New system setting for export folder path.
-
+New functionality - bulk export options for Formz & Formit layouts
+Additional system setting for export file location.
 
 1.3.14.pl
 ---------
