--- a/core/components/formdatamanager/docs/changelog.txt
+++ b/core/components/formdatamanager/docs/changelog.txt
@@ -1,6 +1,11 @@
-FormDataManager-1.3.15.pl
+FormDataManager-1.3.16.pl
 =========================
-New functionality - bulk export options for Formz & Formit layouts
+Fixed problem with FormIt & Formz list processors when filter set.
+Changed to list in form name sequence.
+
+1.3.15.pl
+---------
+New functionality - bulk export options for Formz & Formit layouts.
 Additional system setting for export file location.
 
 1.3.14.pl
